added pagination to category and product
